--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,6 +27,10 @@ h4 {
 	font-size: 2rem;
 }
 
+h5 {
+	font-size: 1.8rem;
+}
+
 .mono,
 p {
 	font-family: 'Roboto Mono', monospace;
@@ -44,4 +48,11 @@ section,
 
 	width: 100%;
 	min-height: 100vh;
+}
+
+.container {
+	max-width: 80rem;
+	padding: 1.5rem;
+	display: flex;
+	flex-direction: row;
 }
