--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,6 +19,10 @@ h1 {
 	font-size: 4.4rem;
 }
 
+h2 {
+	font-size: 3.6rem;
+}
+
 h3 {
 	font-size: 2.2rem;
 }
@@ -58,7 +62,6 @@ section,
 }
 
 .bg-blur {
-	* {
-		backdrop-filter: blur(24px);
-	}
+	z-index: 100;
+	backdrop-filter: blur(24px);
 }
